repaired error page fixxed header identity when too long displayname solved crypt.hash in pw drtv solved pw streng progressbar

--- a/app/less/base/app.less
+++ b/app/less/base/app.less
@@ -147,8 +147,8 @@ button{
   background-color: #428bca;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
-  -webkit-transition: width .6s ease;
-  transition: width .6s ease
+  -webkit-transition: width .6s ease, background-color .6s ease;
+  transition: width .6s ease, background-color .6s ease;
 }
 
 .sr-only {
