--- a/app/less/base/color.less
+++ b/app/less/base/color.less
@@ -76,3 +76,21 @@ cm-security-aspect {
     }
   }
 }
+
+.pw-strength-{
+  &very-weak {
+    background-color: #d9534f;
+  }
+  &week {
+    background-color: #f0ad4e;
+  }
+  &reasonable-normal {
+    background-color: #f0df43;
+  }
+  &strong {
+    background-color: #c4f04e;
+  }
+  &very-strong {
+    background-color: #5cb85c;
+  }
+}
